added computer data

--- a/JenkinsRestClient/JenkinsRestClient.Tests/JenkinsRestClient.Tests.csproj
+++ b/JenkinsRestClient/JenkinsRestClient.Tests/JenkinsRestClient.Tests.csproj
@@ -65,6 +65,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="JsonResults\jenkinsComputerData1.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
