--- a/JenkinsRestClient/JenkinsRestClient.Tests/JenkinsRestClient.Tests.csproj
+++ b/JenkinsRestClient/JenkinsRestClient.Tests/JenkinsRestClient.Tests.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="JsonTests.cs" />
+    <Compile Include="ClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="JsonResults\jenkinsComputerData1.json" />
+    <EmbeddedResource Include="JsonResults\jobDetail1.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
